variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:2: error: not found: value caseOrange
while (!(2 * biscuits == caseOrange + 1)) {
                         ^RunHalf:5: error: not found: value caseOrange
  if (estSurOrange()) caseOrange = caseOrange + 1
                      ^